[workspace]
resolver = "2"
members = ["."]

[workspace.dependencies]
clap = { version = "4.5.6", features = ["derive"] }

[package]
name = "cs"
version = "0.1.13"
edition = "2021"
license = "MIT"
description = "Call stack tool"
repository = "https://github.com/yangyingchao/stack-tool"

[features]
runtime-agnostic = []

[dependencies]
clap.workspace = true
regex = "1"
glob = "0.3.1"
inquire = "0.7.5"
termion = "4.0.2"
colored = "2.1.0"
tokio = { version = "1.39.1", features = ["full", "process"] }
futures = "0.3.30"
pager = "0.16.1"
